--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
   <h1>Frontend course ⚡️</h1>
   <ol>
-    <li><a href="/lesson_1/index.html">HTML intro</a></li>
-    <li><a href="/lesson_2/index.html">CSS intro</a></li>
-    <li><a href="/lesson_3/index.html">CSS Box Model</a></li>
+    <li><a href="lesson_1/index.html">HTML intro</a></li>
+    <li><a href="lesson_2/index.html">CSS intro</a></li>
+    <li><a href="lesson_3/index.html">CSS Box Model</a></li>
   </ol>
 
 </body>
