--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <li><a href="lesson_1/index.html">HTML intro</a></li>
     <li><a href="lesson_2/index.html">CSS intro</a></li>
     <li><a href="lesson_3/index.html">CSS Box Model</a></li>
+    <li><a href="lesson_4/index.html">CSS positioning</a></li>
   </ol>
 
 </body>
