--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Frontend course ⚡️</title>
 </head>
 <body>
@@ -12,6 +13,11 @@
     <li><a href="lesson_2/index.html">CSS intro</a></li>
     <li><a href="lesson_3/index.html">CSS Box Model</a></li>
     <li><a href="lesson_4/index.html">CSS positioning</a></li>
+    <li><a href="lesson_5/index.html">CSS flexbox</a></li>
+  </ol>
+  <h3>🙇‍♂️ homeworks:</h3>
+  <ol>
+    <li><a href="homework_4/index.html">Position movie card</a></li>
   </ol>
 
 </body>
