--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </ol>
   <h3>🙇‍♂️ homeworks:</h3>
   <ol>
-    <li><a href="homework_4/index.html">Position movie card</a></li>
+    <li><a href="hw_4/index.html">Position movie card</a></li>
   </ol>
 
 </body>
