--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <h3>🙇‍♂️ homeworks:</h3>
   <ol>
     <li><a href="hw_4/index.html">Position movie card</a></li>
+    <li><a href="hw_5/index.html">Flexbox cinema banner</a></li>
   </ol>
 
 </body>
