--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <li><a href="lesson_3/index.html">CSS Box Model</a></li>
     <li><a href="lesson_4/index.html">CSS positioning</a></li>
     <li><a href="lesson_5/index.html">CSS flexbox</a></li>
+    <li><a href="lesson_6/index.html">CSS grid layout</a></li>
   </ol>
   <h3>🙇‍♂️ homeworks:</h3>
   <ol>
