--- a/index.html
+++ b/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Frontend course ⚡️</title>
-</head>
-<body>
-  <h1>Frontend course ⚡️</h1>
-  <ol>
-    <li><a href="lesson_1/index.html">HTML intro</a></li>
-    <li><a href="lesson_2/index.html">CSS intro</a></li>
-    <li><a href="lesson_3/index.html">CSS Box Model</a></li>
-    <li><a href="lesson_4/index.html">CSS positioning</a></li>
-    <li><a href="lesson_5/index.html">CSS flexbox</a></li>
-    <li><a href="lesson_6/index.html">CSS grid layout</a></li>
-  </ol>
-  <h3>🙇‍♂️ homeworks:</h3>
-  <ol>
-    <li><a href="hw_4/index.html">Position movie card</a></li>
-    <li><a href="hw_5/index.html">Flexbox cinema banner</a></li>
-  </ol>
 
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <title>Frontend course ⚡️</title>
+  </head>
+
+  <body>
+    <h1>Frontend course ⚡️</h1>
+    <ol>
+      <li><a href="lesson_1/index.html">HTML intro</a></li>
+      <li><a href="lesson_2/index.html">CSS intro</a></li>
+      <li><a href="lesson_3/index.html">CSS Box Model</a></li>
+      <li><a href="lesson_4/index.html">CSS positioning</a></li>
+      <li><a href="lesson_5/index.html">CSS flexbox</a></li>
+      <li><a href="lesson_6/index.html">CSS grid layout</a></li>
+      <li><a href="lesson_7/index.html">Media queries + favicon</a></li>
+    </ol>
+    <h3>🙇‍♂️ homeworks:</h3>
+    <ol>
+      <li><a href="hw_4/index.html">Position movie card</a></li>
+      <li><a href="hw_5/index.html">Flexbox cinema banner</a></li>
+      <li><a href="hw_6/index.html">Grid CSS practice</a></li>
+    </ol>
+
+  </body>
+
 </html>
