--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/fontawesome-all.css">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <title>Frontend course ⚡️</title>
@@ -11,6 +12,8 @@
 
   <body>
     <h1>Frontend course ⚡️</h1>
+    <i class="fa-solid fa-universal-access" style="color: #B197FC;"></i>
+    <i class="arrow fa-solid fa-arrow-right" style="color: #5b677e; font-size: 40px;"></i>
     <ol>
       <li><a href="lesson_1/index.html">HTML intro</a></li>
       <li><a href="lesson_2/index.html">CSS intro</a></li>
@@ -26,7 +29,9 @@
       <li><a href="hw_5/index.html">Flexbox cinema banner</a></li>
       <li><a href="hw_6/index.html">Grid CSS practice</a></li>
     </ol>
+    <script src="https://kit.fontawesome.com/7f5b2ca6d8.js" crossorigin="anonymous"></script>
 
   </body>
+
 
 </html>
