--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 
   <body>
     <h1>Frontend course ⚡️</h1>
-    <i class="fa-solid fa-universal-access" style="color: #B197FC;"></i>
-    <i class="arrow fa-solid fa-arrow-right" style="color: #5b677e; font-size: 40px;"></i>
     <ol>
       <li><a href="lesson_1/index.html">HTML intro</a></li>
       <li><a href="lesson_2/index.html">CSS intro</a></li>
@@ -22,6 +20,8 @@
       <li><a href="lesson_5/index.html">CSS flexbox</a></li>
       <li><a href="lesson_6/index.html">CSS grid layout</a></li>
       <li><a href="lesson_7/index.html">Media queries + favicon</a></li>
+      <li><a href="">Berlin.app</a></li>
+      <li><a href="lesson_9/index.html">JS DOM</a></li>
     </ol>
     <h3>🙇‍♂️ homeworks:</h3>
     <ol>
@@ -29,7 +29,6 @@
       <li><a href="hw_5/index.html">Flexbox cinema banner</a></li>
       <li><a href="hw_6/index.html">Grid CSS practice</a></li>
     </ol>
-    <script src="https://kit.fontawesome.com/7f5b2ca6d8.js" crossorigin="anonymous"></script>
 
   </body>
 
