--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li><a href="lesson_7/index.html">Media queries + favicon</a></li>
       <li><a href="lesson_8/index.html">Berlin.app</a></li>
       <li><a href="lesson_9/index.html">JS DOM</a></li>
+      <li><a href="lesson_10/index.html">JS basics</a></li>
     </ol>
     <h3>🙇‍♂️ homeworks:</h3>
     <ol>
@@ -30,8 +31,5 @@
       <li><a href="hw_6/index.html">Grid CSS practice</a></li>
       <li><a href="hw_9/index.html">Magic buttons</a></li>
     </ol>
-
   </body>
-
-
 </html>
