--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <li><a href="lesson_8/index.html">Berlin.app</a></li>
       <li><a href="lesson_9/index.html">JS DOM</a></li>
       <li><a href="lesson_10/index.html">JS basics</a></li>
+      <li><a href="lesson_11/index.html">JS arrays & objects</a></li>
     </ol>
     <h3>🙇‍♂️ homeworks:</h3>
     <ol>
