--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <h1>Frontend course ⚡️</h1>
     <ol>
-      <li><a href="lesson_1/index.html">HTML intro</a>    </li>
+      <li><a href="lesson_1/index.html">HTML intro</a></li>
       <li><a href="lesson_2/index.html">CSS intro</a></li>
       <li><a href="lesson_3/index.html">CSS Box Model</a></li>
       <li><a href="lesson_4/index.html">CSS positioning</a></li>
@@ -24,6 +24,7 @@
       <li><a href="lesson_9/index.html">JS DOM</a></li>
       <li><a href="lesson_10/index.html">JS basics</a></li>
       <li><a href="lesson_11/index.html">JS arrays & objects</a></li>
+      <li><a href="lesson_11/index.html">JS functions & array methods</a></li>
     </ol>
     <h3>🙇‍♂️ homeworks:</h3>
     <ol>
