--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       <li><a href="lesson_9/index.html">JS DOM</a></li>
       <li><a href="lesson_10/index.html">JS basics</a></li>
       <li><a href="lesson_11/index.html">JS arrays & objects</a></li>
-      <li><a href="lesson_11/index.html">JS functions & array methods</a></li>
+      <li><a href="lesson_12/index.html">JS functions & array methods</a></li>
+      <li><a href="lesson_13/index.html">DOM practice</a></li>
     </ol>
     <h3>🙇‍♂️ homeworks:</h3>
     <ol>
