--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <li><a href="lesson_12/index.html">JS functions & array methods</a></li>
       <li><a href="lesson_13/index.html">DOM practice</a></li>
       <li><a href="lesson_14/index.html">DOM input practice + counter</a></li>
+      <li><a href="lesson_15/index.html">Async intro</a></li>
     </ol>
     <h3>🙇‍♂️ homeworks:</h3>
     <ol>
