--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
       <li><a href="lesson_13/index.html">DOM practice</a></li>
       <li><a href="lesson_14/index.html">DOM input practice + counter</a></li>
       <li><a href="lesson_15/index.html">Async intro</a></li>
+      <li><a href="lesson_16/index.html">Fetch practice</a></li>
+      <li><a href="lesson_17/index.html">Shop API</a></li>
     </ol>
     <h3>🙇‍♂️ homeworks:</h3>
     <ol>
@@ -35,6 +37,8 @@
       <li><a href="hw_5/index.html">Flexbox cinema banner</a></li>
       <li><a href="hw_6/index.html">Grid CSS practice</a></li>
       <li><a href="hw_9/index.html">Magic buttons</a></li>
+      <li><a href="hw_15/index.html">Know your gender ✨</a></li>
+      <li><a href="hw_16/index.html">Fetch cat fact 🐈</a></li>
     </ol>
   </body>
 </html>
