--- a/lesson_17/index.html
+++ b/lesson_17/index.html
@@ -14,8 +14,14 @@
       <h1>Shop API 🏪</h1>
     </header>
     <main>
-      <div id="container-products" class="container-products">
+      <div class="form-wrapper" id="form-wrapper">
+        <form class="form-items" id="form-items">
+          <input type="text" name="amount" placeholder="type amount of items" required>
+          <button type="submit">upload</button>
+        </form>
+      </div>
       <div id="loader" class="loader loader-hide"></div>
+      <div id="container-products" class="container-products">
       </div>
     </main>
     <footer></footer>
