--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <li><a href="lesson_15/index.html">Async intro</a></li>
       <li><a href="lesson_16/index.html">Fetch practice</a></li>
       <li><a href="lesson_17/index.html">Shop API</a></li>
+      <li><a href="lesson_19/index.html">Youtube API</a></li>
     </ol>
     <h3>🙇‍♂️ homeworks:</h3>
     <ol>
