--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <li><a href="hw_9/index.html">Magic buttons</a></li>
       <li><a href="hw_15/index.html">Know your gender ✨</a></li>
       <li><a href="hw_16/index.html">Fetch cat fact 🐈</a></li>
+      <li><a href="hw_products/index.html">Products API 🛍️</a></li>
     </ol>
   </body>
 </html>
