--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <li><a href="lesson_16/index.html">Fetch practice</a></li>
       <li><a href="lesson_17/index.html">Shop API</a></li>
       <li><a href="lesson_19/index.html">Youtube API</a></li>
+      <li><a href="lesson_20/index.html">Weather App</a></li>
     </ol>
     <h3>🙇‍♂️ homeworks:</h3>
     <ol>
